@@ -7,6 +7,9 @@ GenericSetup 1.4.3 (unreleased)
 - Avoid even an explicit purge of the rolemap if no XML file is present
   in a given context.  (https://bugs.launchpad.net/zope-cmf/+bug/279294)
 
+- Changed upgrade logic to set the current version after an upgrade to the
+  of the last step, instead of the current profile version.
+
 GenericSetup 1.4.2.2 (2008-09-22)
 ---------------------------------
 
